--- a/src/ToDo.css
+++ b/src/ToDo.css
@@ -1,9 +1,17 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .todo-container {
   background: #ffcc00;
-  width: 30vw;
+  width: 80%;
   margin: 10em auto;
   border-radius: 15px;
-  padding: 20px 10px;
+  padding: 20px 0;
   color: #ffffff;
 }
 
@@ -13,9 +21,13 @@
   border: 1px solid #ffffff;
   border-radius: 5px;
   padding: 0.5em;
-  margin: 0.5em;
+  margin: 0.5em 1em;
 }
 
+.task-title {
+  word-break: break-all;
+  width: 70%;
+}
 
 .complete-icon {
   color: #0c7cfb;
@@ -34,11 +46,33 @@
   text-align: center;
 }
 
+.create-task {
+  text-align: center;
+  margin-top: 1em;
+}
+
 .create-task input[type=text] {
-  margin: 2.5em 3em;
   width: 80%;
   outline: none;
   border: none;
   padding: 0.7em;
   color: #000000;
+}
+
+@media(min-width: 768px) {
+  .todo-container {
+    width: 50%;
+  }
+}
+
+@media(min-width: 1440px) {
+  .todo-container {
+    width: 35%;
+  }
+}
+
+@media(min-width: 2560px) {
+  .todo-container {
+    width: 25%;
+  }
 }
